#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999919 released.

        * Repaired some more Makefile.PL issues.


2012-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999918 released.

        * Repaired some more Makefile.PL issues.


2012-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999917 released.

        * Repaired some more Makefile.PL issues.


2012-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999916 released.

        * Repaired some more Makefile.PL issues.


2012-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999915 released.

        * Repaired some Makefile.PL issues.


2012-08-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999914 released.

        * Connection handle to mozrepl now has repl method.


2012-08-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999913 released.

        * Fixed telnet functionality to work with mozrepl.


2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999912 released.

        * Fixed for passwords with parentesis.


2012-05-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999911 released.

        * Changed Oracle url for berkeleydb download.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999910 released.

        * Updated Error message to include command.

        * Updated Term::Menus dependency to 2.15.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>