@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ae01959e924c2b36dfca1de9e47555196762dbb5 ChangeLog
+SHA1 60a4ed53d3ec5814ae9fc866d01c4b8da817a5a5 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 1f94a7ee7783ec7f10cc7ac5c206f66ef5204ff9 META.yml
-SHA1 1e514a404667cce53ab9135c09dae82e98dffd41 MYMETA.json
-SHA1 2c14c5d47e3475318aa0678be109806bd2a57c2c MYMETA.yml
-SHA1 7c715b0641da86102a907c8fa968fa967cc25f77 Makefile.PL
+SHA1 a75429eb96da2c476ec43aceaa61ea6f3941342d META.yml
+SHA1 af8d5fca47a8c6d598175354156c67bec590962d MYMETA.json
+SHA1 f375c872058ccb179c00bf73690ac66c7e1add10 MYMETA.yml
+SHA1 ef5636000a24233ca5b0f534e4205ead39cb0aaf Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 6810c2b5c92be15e9b1989b6008d1f6b5d5682b9 lib/Net/FullAuto.pm
+SHA1 b0199ab6b57e48f9b4e72d1f621cdcb44eff8ef4 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBfv1IACgkQJM3IZYB6aOqBfQCeK0r8bxA2epldIntVMJWNpQrG
-WPoAoKz16eJGIb2QICOFUrnzPRYW6Z4l
-=ZRAk
+iEYEARECAAYFAlBf1ToACgkQJM3IZYB6aOqxswCfdv88+miq7xnVJPQyOJG84QD3
+rEIAniCTV5HSSi2ed6osnxjNx/E8RYEN
+=pEng
 -----END PGP SIGNATURE-----
